--- a/vercel.json
+++ b/vercel.json
@@ -3,21 +3,21 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    },
-    {
       "src": "package.json",
-      "use": "@vercel/static-build",
+      "use": "@vercel/node",
       "config": {
-        "distDir": "dist/public"
+        "includeFiles": [
+          "dist/**",
+          "data/**",
+          "shared/**"
+        ]
       }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/index.ts"
+      "dest": "/dist/index.js"
     },
     {
       "src": "/(.*)",
@@ -27,6 +27,9 @@
   "env": {
     "NODE_ENV": "production"
   },
-  "installCommand": "npm install",
-  "buildCommand": "npm run build"
+  "functions": {
+    "dist/index.js": {
+      "maxDuration": 30
+    }
+  }
 }
